Logged end-point info

--- a/src/app/favourite-items.component.html
+++ b/src/app/favourite-items.component.html
@@ -1,2 +1,5 @@
 <mat-checkbox>Subscribe to the newsletter</mat-checkbox>
 <my-card></my-card>
+<!-- <div class="suite" *ngFor="let element of elements">
+		<p [summary]="element"></p>
+</div> -->
