--- a/src/app/favourite-items.component.html
+++ b/src/app/favourite-items.component.html
@@ -1,5 +1,5 @@
-<mat-checkbox>Subscribe to the newsletter</mat-checkbox>
-<my-card></my-card>
-<!-- <div class="suite" *ngFor="let element of elements">
-		<p [summary]="element"></p>
-</div> -->
+<div *ngIf="jsonEntriesBlocks">
+	<div *ngFor="let jsonBlock of jsonEntriesBlocks">
+		<my-card [jsonBlock]="jsonBlock"></my-card>
+	</div>
+</div>
