--- a/src/app/favourite-items.component.html
+++ b/src/app/favourite-items.component.html
@@ -1,5 +1,8 @@
-<div *ngIf="jsonEntriesBlocks">
-	<div *ngFor="let jsonBlock of jsonEntriesBlocks">
-		<my-card [jsonBlock]="jsonBlock"></my-card>
+<mat-card>
+	<mat-card-title>Your favourite files and folders</mat-card-title>
+	<div class="cards-container" *ngIf="jsonEntriesBlocks">
+		<div *ngFor="let jsonBlock of jsonEntriesBlocks">
+			<my-card [jsonBlock]="jsonBlock"></my-card>
+		</div>
 	</div>
-</div>
+</mat-card>
